tests/paczka1/fuzzy1/75652356.err
Error in line 11: czl5PD S803 11,0
Error in line 7: S104 S24 99,4
Error in line 18: czl5PD S748 11,5
Error in line 22: czl5PD S104 10,2
Error in line 25: 2O1V S104 34,99
Error in line 24: ebl0h7XKI1B S748 26,1
Error in line 28: ebl0h7XKI1B S24 55,2
Error in line 36: 2bttGdbHqT S748 46,8
Error in line 38: 2bttGdbHqT S24 3,9
